--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,11 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+MoNuSeg 2018 Training Data/
+MoNuSeg-master-1024x1024/
+Tiled-MoNuSeg-2018-ImageMask-Dataset-M1/
+Tiled-MoNuSeg-2018-ImageMask-Dataset-M1.zip
+
+Tiled-MoNuSeg-master/
+MoNuSegTestData/
